# XRay_Selection_Tools

./: README.md  __init__.py  functions.py  global_op.py  help.py  keymaps.py  legacy_register.py  op_box.py  op_circle.py  op_lasso.py  operators.py  ot_keymap.py  preferences.py  pyproject.toml  tools.py  tools_dummy.py  tools_keymap.py  ui.py  ui_preferences.py  utils.py
docs/: 404.html  index.html  search.html  sitemap.xml
docs/changelog/: index.html
docs/css/: extra.css
docs/installation/: index.html
docs/keymap_prefs/: index.html
docs/mesh_prefs/: index.html
docs/object_prefs/: index.html
docs/search/: search_index.json
functions/: intersect.py  legacy_tool_registration.py  mesh_modal.py  modal.py  object_intersect_box.py  object_intersect_circle.py  object_intersect_lasso.py  object_modal.py
mesh/: mesh_op_box.py  mesh_op_circle.py  mesh_op_lasso.py  mesh_ot_global.py  mesh_ot_lasso.py  op_box.py  op_circle.py  op_lasso.py
mesh_ot/: mesh_ot.py  mesh_ot_box.py  mesh_ot_circle.py  mesh_ot_lasso.py
object/: object_op_box.py  object_op_circle.py  object_op_lasso.py  object_ot_circle.py  object_ot_lasso.py  op_box.py  op_circle.py  op_lasso.py
object_ot/: object_ot_box.py  object_ot_circle.py  object_ot_lasso.py
space_view3d_xray_selection_tools/: __init__.py  addon_info.py  blender_manifest.toml  help.py  ot_keymap.py  preferences.py  reloader.py  startup.py  startup_handlers.py  tools.py  tools_dummy.py  types.py  ui_preferences.py
space_view3d_xray_selection_tools/dev/: debug_shader.py  reloader.py
space_view3d_xray_selection_tools/functions/: debug_shader.py  geometry_tests.py  mesh_intersect.py  mesh_modal.py  object_intersect.py  object_intersect_box.py  object_intersect_circle.py  object_intersect_lasso.py  object_intersect_shared.py  object_modal.py  polygon_tests.py  selection.py  timer.py  toolbar.py  view3d.py  view3d_utils.py
space_view3d_xray_selection_tools/icon/: lasso_cursor.py
space_view3d_xray_selection_tools/mesh_attr/: edge_attr.py  face_attr.py  loop_attr.py  poly_attr.py  vert_attr.py
space_view3d_xray_selection_tools/mesh_ot/: mesh_ot.py  mesh_ot_box.py  mesh_ot_circle.py  mesh_ot_lasso.py  mesh_ot_toggle.py
space_view3d_xray_selection_tools/object_ot/: object_ot_box.py  object_ot_circle.py  object_ot_lasso.py
space_view3d_xray_selection_tools/operators/: __init__.py  help_ot.py  ot_keymap.py  xraysel_ot_info.py
space_view3d_xray_selection_tools/preferences/: __init__.py  addon_preferences.py
space_view3d_xray_selection_tools/tools/: __init__.py  tools_dummy.py  tools_keymap.py  tools_main.py  tools_utils.py
space_view3d_xray_selection_tools/ui/: __init__.py  header_buttons.py
wiki/: mkdocs.yml
wiki/docs/: changelog.md  index.md  installation.md  keymap_prefs.md  mesh_prefs.md  object_prefs.md
(+27 files in other folders)
