[tool.poetry]
name = "xray-selection-tools"
version = "4.7.0"
description = "Box, lasso and circle selection tools with x-ray"
authors = ["MarshmallowCirno <marshmallowcirno@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "1.24.3"

[tool.poetry.group.dev.dependencies]
fake-bpy-module = "^20250217"
pylint = "^3.3.1"
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.basic]
good-names = ["v", "e", "f", "c", "ob", "me", "bm"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0103"  # Disable class name convention warning
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"
