[project]
name = "xray-selection-tools"
version = "4.10.1"
description = "Box, lasso and circle selection tools with x-ray"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "MarshmallowCirno", email = "marshmallowcirno@gmail.com" },
]
dependencies = [
    "numpy==2.3.4",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "fake-bpy-module>=20260426",
    "pylint>=4.0.5",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.pylint.basic]
good-names = ["v", "e", "f", "c", "ob", "me", "bm"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0103"  # Disable class name convention warning
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"

[tool.pyright]
include = ["space_view3d_xray_selection_tools"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportMissingModuleSource = false
